--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
     --transition-smooth: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
 }
 
+.text-center {
+    text-align: center;
+}
+
 /* Preloader */
 #preloader {
     position: fixed;
