--- a/style.css
+++ b/style.css
@@ -999,6 +999,18 @@ h2 {
     z-index: 3;
 }
 
+.card-4 {
+    z-index: 4;
+}
+
+.card-5 {
+    z-index: 5;
+}
+
+.card-6 {
+    z-index: 6;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
     .stack-card-inner {
