--- a/contact.css
+++ b/contact.css
@@ -501,15 +501,15 @@
 /* Full-Width Map Section */
 .map-section {
     width: 100%;
-    height: 450px;
-    position: relative;
     overflow: hidden;
     line-height: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .map-section iframe {
     width: 100%;
-    height: 100%;
+    height: 550px;
     display: block;
 }
 
